tests/errors/subroutine3.f90
program sizef

    call f()
    
    contains
    
        subroutine f()
        print *, size(f)
        end subroutine
    
    end program